# GLGE_Core

./: .gitignore  .gitmodules  CMakeLists.txt  GLGECore.h  README.md  Types.h  Util.h  settings.gsav  test.file  test.txt  tmp
.github/workflows/: cmake-multi-platform.yml
Application/: App.h  Application.h
Assets/: Asset.cpp  AssetManager.cpp  AssetManager.h  AssetStream.cpp  AssetStream.h
Events/: Event.h  Events.h
Filesystem/: Compression.cpp  Encryption.cpp  Encryption.h  File.h  FileDecorator.h
GLGE_BG/: Makefile  cmake_install.cmake
Geometry/Structure/: Structure.h  Transform.h
Geometry/Structure/ECS/: Object.h  Scene.cpp  Scene.h  System.h
Geometry/Surface/: Mesh.cpp  Mesh.h  MeshAsset.cpp  MeshAsset.h  Surface.h  Triangle.cpp  Triangle.h  Vertex.h  VertexLayout.h
Geometry/Volumes/: AABB.h
Layers/: LayerBase.hpp  LayerStack.cpp  Layers.h
Setting/: Setting.h  Settings.cpp
src/: main.cpp
src/GLGECore/: CMakeLists.txt  GLGECore.h  Types.h
src/GLGECore/Application/: App.cpp  App.h
src/GLGECore/Assets/: Asset.h  AssetStream.cpp  AssetType.h  Assets.h
src/GLGECore/Events/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h
src/GLGECore/Filesystem/: Compression.cpp  Compression.h  File.cpp  File.h  Filesystem.h
src/GLGECore/Geometry/: Geometry.h
src/GLGECore/Geometry/Structure/: Transform.cpp  Transform.h
src/GLGECore/Geometry/Structure/ECS/: ECS.h  Object.h  Scene.h
src/GLGECore/Geometry/Surface/: Mesh.cpp  Mesh.h  MeshAsset.cpp  Surface.h  Vertex.h  VertexElement.h  VertexLayout.cpp  VertexLayout.h
src/GLGECore/Geometry/Volumes/: AABB.cpp  AABB.h  BVH.h  Sphere.h  Volume.cpp  Volume.h  Volumes.h
src/GLGECore/Layers/: Layer.h  LayerBase.hpp  LayerStack.cpp  LayerStack.h
src/GLGECore/Messages/: GLGE_LayerStack.h  GLGE_Layers.h  GLGE_Message.h  GLGE_Messages.h  Message.h  MessageListener.cpp  MessageListener.h  Messages.h
src/GLGECore/Setting/: Settings.cpp  Settings.h
